# legal-assistant

./: .gitignore  COMPARISON_SUMMARY.md  IMPLEMENTATION_STATUS.md  IMPROVEMENTS_GUIDE.md  README.md  app.py  pyproject.toml  quickstart.md  reprocess_documents.py  requirements.txt  setup.py
.github/: description.md
core/: __init__.py  chat_engine.py  document_processor.py  file_reader.py  vector_engine.py
templates/: chat.html
